<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/configure"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/radiogroup_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp" 
        android:text="@string/radiogroup"/>
    
    <RadioGroup
        android:id="@+id/radioGroup1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radiogroup_label"
        android:layout_alignParentLeft="true" >
        
        <RadioButton
            android:id="@+id/radio_combo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_combo" />
        
        <RadioButton
            android:id="@+id/radio_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_days" />

        <RadioButton
            android:id="@+id/radio_weeks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_weeks" />
    </RadioGroup>

    <EditText
        android:id="@+id/text_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/config_month_text"
        android:inputType="number" />
    
    <EditText
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_month"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/config_date_text"
        android:inputType="number"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/text_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_date"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/config_year_text"
        android:inputType="number" />

    <TextView
        android:id="@+id/text_previous_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_year"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="40dp"
        android:text="@string/previous_input" />
    
    <View
        android:id="@+id/strut"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@id/strut"
        android:text="@string/create_button" />

    <Button
        android:id="@+id/button_current"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/strut"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/current_button" />

</RelativeLayout>